<resources>
    <string name="app_name">RunApp</string>
    <string name="run">Run</string>
    <string name="account">Account</string>
    <string name="activity">Activity</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="titleRequestPermission">Location Permission Needed</string>
    <string name="messageRequestPermission">To track runs, RunApp requires location access</string>
    <string name="messageNoRun">I’m sorry. Unfortunately you can’t run until you’ll give the permission for the GPS localization. Please go in settings and enable the localization.</string>
    <string name="titleNoRun">Error. You can\'t run</string>
    <string name="setting">Settings</string>
    <string name="notificationTitle">RunApp is following you</string>
    <string name="notificationMessage">Your session is tracked even if you\'re not directly in the app.</string>
    <string name="time">Time:</string>
    <string name="km_total">Km total:</string>
    <string name="average_pace">Average pace:</string>
    <string name="email_address">E-mail</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="register">Sign up</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_app">RegisterForm</string>
    <string name="first_second_name">Name and surname</string>
    <string name="empty_name_surname">Empty field or insufficient characters</string>
    <string name="password_check">Passwords don\'t match</string>
    <string name="image_view">TODO</string>
    <string name="day">Day:</string>
    <string name="start_Run">Run</string>
    <string name="titleEndRun">Are you sure you want to finish your run?</string>
    <string name="messageEndRun">By pressing yes, the run will end completely</string>
    <string name="yesButton">Yes</string>
    <string name="modify_profile">Modify Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth (click me)</string>
    <string name="gender">Gender</string>
    <string name="gender_not_selected">Please select the gender</string>
    <string name="logout">Logout</string>
    <string name="edit_account">Edit account</string>
    <string name="edit_password">Edit password</string>
    <string name="update_account">Update account</string>
    <string name="user_years">years</string>
    <string name="old_password">Old password</string>
    <string name="update_password">Update password</string>
    <string name="old_password_check">The old password does not match</string>
    <string name="choose_another_password">Choose a different password from the one used previously</string>
    <string name="end_run">End your run</string>
    <string name="distance">Distance</string>
    <string name="average_pale">Average Pace</string>
    <string name="titleGPSNotEnable">GPS isn\'t enable</string>
    <string name="messageGPSNotEnable">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="titleNoGooglePlayServices">Google Play Service not present on your device</string>
    <string name="messageNoGooglePlayService">This app requires Google Play Service, please install and try again.</string>
    <string name="sendToFirebaseOk">Session loaded</string>
    <string name="sendToFirebaseFailed">Unable to load session</string>
    <string name="edit_your_account">Edit your account</string>
    <string name="edit_your_password">Edit your password</string>
    <string name="signout_app">Disconnected from the app</string>
    <string name="titlePassword">Attention password update</string>
    <string name="messagePassword">Are you sure you want to update your password?</string>
    <string name="titleInformation">Attention updating information</string>
    <string name="messaggeInformation">Are you sure you want to update your information?</string>
    <string name="titleDateofBirth">Attention</string>
    <string name="messageDateofBirth">Once registration is complete, the date of birth cannot be changed anymore</string>
    <string name="enterDateofBirth">Please enter your date of birth</string>
    <string name="titleUpdatePassword">Impossible to update password</string>
    <string name="messageUpdatePassword">Sorry, the password could not be updated</string>
    <string name="timeDetail">Time</string>
    <string name="messageNoConsideration">The session just held was not taken into consideration</string>
    <string name="titleRunSession">Race session details</string>
    <string name="warningPassword">Enter a password with a minimum of 8 characters (maximum of 20), a lowercase letter, an uppercase letter and a number.</string>
    <string name="warningNameSurname">Enter your name and surname, both must be at least two characters long</string>
    <string name="departureMarker">Start</string>
    <string name="endMarker">End</string>
    <string name="signedIn">Signed in</string>
    <string name="notSignedIn">Access denied, register</string>
    <string name="registrationCompleted">Registration completed</string>
    <string name="registrationFailed">Registration failed</string>
    <string name="titleSignOut">Disconnection</string>
    <string name="messageSignOut">Are you sure you want to log out of your account?</string>
    <string name="average_speed">Average speed</string>
    <string name="password_update">Password update correctly</string>
    <string name="re_auth_failed">Incorrect credentials. Unable to update, Please try again.</string>
    <string name="empty_old_password">Old password field is empty</string>
    <string name="email_change_success">Email change was successful</string>
    <string name="email_change_unsuccess">Unable to edit email, please try again</string>
    <string name="Update_complete">Data update completed</string>
    <string name="titleRequestPassword">Please, insert your user password</string>
    <string name="noActivity">You have no activity, start running</string>
    <string name="localizationDisable">Localization is disabled</string>
    <string name="accuracyString">"Accuracy: "</string>
    <string name="yearsOld">Sorry, you\'re too young to sign up on this app.</string>
    <string name="DontHaveAccount">Don\'t have an account?</string>
</resources>